# nifty500-treemap

./: .gitignore  DEPLOY.md  README.md  build_site_data.py  domain_map.json  fetch_data.py  nifty500.csv  pyproject.toml
.github/workflows/: daily-update.yml
docs/: data.json  index.html  robots.txt  sitemap.xml
scripts/: get_nifty500.py
site/: data.json  index.html
